--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Assinment</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="banner-img">
+        <div class="banner-text">
+          <p>Happy New Year</p>
+          <h1>New Year Party Celebration</h1>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="featured-section">
+        <div class="featured">
+          <div class="section-heading">
+            <h1>65% OFF</h1>
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2>ALL CATEGORIES</h2>
+          </div>
+          <div class="section-img">
+            <img src="resources/New Year Photo.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <div id="background-img">
+          <div class="container banner">
+            <div class="container-text">
+              <h1>Welcome to midnight party</h1>
+              <p>
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+                vel euismod.
+              </p>
+              <button>Join Now</button>
+            </div>
+            <div class="container-img">
+              <img src="resources/Group 70.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="card">
+          <div class="card-text">
+            <h3>Place: New Park Hotel</h3>
+            <h3>Date: 31 December Night 2023</h3>
+            <h3>Time: Evening 7.30 pm to 12.30 am</h3>
+            <button class="imp">Join Now</button>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="header-text">
+          <h3>THE BEST GIFTS</h3>
+          <h1>Our Awesome Portfolio</h1>
+          <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
