added a skill container

--- a/index.html
+++ b/index.html
@@ -57,10 +57,40 @@
         </div>
       </section>
       <section>
-        <div class="header-text">
+        <div id="description" class="header-text">
           <h3>THE BEST GIFTS</h3>
           <h1>Our Awesome Portfolio</h1>
           <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="resources/Rectangle 3.png" alt="">
+          </div>
+          <div class="skill">
+            <img src="resources/Rectangle 4.png" alt="">
+          </div>
+          <div class="skill">
+            <img src="resources/Rectangle 5.png" alt="">
+          </div>
+          <div class="skill">
+            <img src="resources/Rectangle 6.png" alt="">
+          </div>
+          <div class="skill">
+            <img src="resources/Rectangle 7.png" alt="">
+          </div>
+          <div class="skill">
+            <img src="resources/Rectangle 8.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="subscribe">
+          <div class="newsletter">
+            <img src="" alt="">
+            <div class="subscribe-text">
+
+            </div>
+          </div>
         </div>
       </section>
     </main>
