--- a/index.html
+++ b/index.html
@@ -60,39 +60,82 @@
         <div id="description" class="header-text">
           <h3>THE BEST GIFTS</h3>
           <h1>Our Awesome Portfolio</h1>
-          <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
         </div>
         <div class="skills-container">
           <div class="skill">
-            <img src="resources/Rectangle 3.png" alt="">
+            <img src="resources/Rectangle 3.png" alt="" />
           </div>
           <div class="skill">
-            <img src="resources/Rectangle 4.png" alt="">
+            <img src="resources/Rectangle 4.png" alt="" />
           </div>
           <div class="skill">
-            <img src="resources/Rectangle 5.png" alt="">
+            <img src="resources/Rectangle 5.png" alt="" />
           </div>
           <div class="skill">
-            <img src="resources/Rectangle 6.png" alt="">
+            <img src="resources/Rectangle 6.png" alt="" />
           </div>
           <div class="skill">
-            <img src="resources/Rectangle 7.png" alt="">
+            <img src="resources/Rectangle 7.png" alt="" />
           </div>
           <div class="skill">
-            <img src="resources/Rectangle 8.png" alt="">
+            <img src="resources/Rectangle 8.png" alt="" />
           </div>
         </div>
       </section>
       <section>
         <div class="subscribe">
           <div class="newsletter">
-            <img src="" alt="">
+            <img src="resources/Group 61.png" alt="" />
             <div class="subscribe-text">
-
+              <h1>Subscribe Newsletter</h1>
+              <p>
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+                vel euismod.
+              </p>
+              <div class="input-feild">
+                <input
+                  class="input-btn"
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="user@gmail.com"
+                />
+                <button class="sub-button">Subscribe</button>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-item">
+        <p>44, Big Building Roosevelt Street</p>
+        <p>Beach Gardens Florida 33410</p>
+        <div class="social-links">
+          <a href=""><img src="resources/Facebook.png" alt="" /></a>
+          <a href=""><img src="resources/Instagram.png" alt="" /></a>
+          <a href=""><img src="resources/Twitter.png" alt="" /></a>
+          <a href=""><img src="resources/Linkedin.png" alt="" /></a>
+        </div>
+        <p class="section-description">2017, All Rights Reserved.</p>
+      </div>
+      <div class="footer-item">
+        <div class="section-title">
+          <img src="resources/Website.png" alt="" />
+          <p>+00 123 584 124</p>
+        </div>
+        <div class="section-title-text">
+          <img src="resources/Website.png" alt="" />
+          <p>www.website.com</p>
+        </div>
+        <p id="description">Unsubscribe</p>
+      </div>
+    </footer>
   </body>
 </html>
