finished  the pojects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="banner-img">
         <div class="banner-text">
           <p>Happy New Year</p>
-          <h1>New Year Party Celebration</h1>
+          <h1>New Year Party <br/> Celebration</h1>
         </div>
       </div>
     </header>
@@ -30,15 +30,15 @@
       </section>
       <section class="container">
         <div id="background-img">
-          <div class="container banner">
+          <div class="container-banner">
             <div class="container-text">
-              <h1>Welcome to midnight party</h1>
+              <h1>Welcome to <br/> midnight party</h1>
               <p>
                 Dolor sit amet consectetur. Consequat eget consectetur maecenas
                 sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
                 vel euismod.
               </p>
-              <button>Join Now</button>
+              <h3>Join Now</h3>
             </div>
             <div class="container-img">
               <img src="resources/Group 70.png" alt="" />
@@ -54,6 +54,56 @@
             <h3>Time: Evening 7.30 pm to 12.30 am</h3>
             <button class="imp">Join Now</button>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="comming-soon">
+          <div class="comming-text">
+            <h3>NEW BEST OFFER</h3>
+            <h2>Coming Soon</h2>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <div class="commming-img">
+            <img src="resources/Ellipse 1.png" alt="" />
+          </div>
+          <div class="comming-content">
+            <h2>2024</h2>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed.
+            </p>
+            <img src="resources/Group 96.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="holiday-text">
+          <h3>WHAT IS FUNCTIONAL</h3>
+          <h1><span class="Holiday">Holidays</span> Sale 50%</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id fermentum amet amet sit
+            consectetur.
+          </p>
+        </div>
+        <div class="holiday-content">
+          <div class="holiday-img-1">
+            <img src="resources/Group 75.png" alt="">
+          </div>
+          <div class="holiday-img-2">
+            <img src="resources/Group 44.png" alt="">
+          </div>
+          <div class="holiday-img-3">
+            <img src="resources/Rectangle 1.png" alt="">
+          </div>
+        </div>
+        <div class="holiday-img-4">
+          <img src="resources/Rectangle 2.png" alt="">
         </div>
       </section>
       <section>
